# mgba_gaming_agent

./: .gitignore  Cargo.toml  README.md  notes.txt
configuration_templates/: agent_config_0.json  agent_config_1.json
src/: agent_stuff.rs  main.rs
src/agent_stuff/: mgba_ffi.rs  observation.rs  sdl_window.rs
src/agent_stuff/mgba_ffi/: mgba_bindings.rs  wrapper.h
